--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,27 @@
+$font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-$font: 'Montserrat'
 
-body {
+//Colors
+$red: #C41E3D;
+$dark-red: #7D1128;
+$white: #ffff;
+$black:#0000;
+
+html, body {
+    font-family: $font;
+    font-size: 16px;
+}
+
+.container {
+    width: 1640px;
+    min-width: 1640px;
+    margin: 0 auto;
+}
+
+
+
+h1 {
     font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
 }
