--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,20 +8,24 @@ $white: #ffff;
 $black:#0000;
 
 html, body {
+    margin: 0 auto;
     font-family: $font;
     font-size: 16px;
+
 }
-
-.container {
-    width: 1640px;
-    min-width: 1640px;
-    margin: 0 auto;
-}
-
-
 
 h1 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     text-transform: uppercase;
 }
+
+p {
+    font-family: 'Karla', sans-serif;
+    font-weight: 400;
+}
+
+a {
+    font-family: 'Montserrat', sans-serif;
+}
+
