--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -20,9 +20,7 @@ header {
             }
         }
         .nav-item {
-            // display: flex;
-            // list-style: none;
-            // margin: 0;
+            font-family: 'Montserrat', sans-serif;
             color: #000000;
             margin-right: 1.3rem;
             text-decoration: none;
