--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -10,6 +10,7 @@ header {
         height: 80px;
         font-size: 1.3rem;
         .logo {
+            font-family: 'Montserrat', sans-serif;
             font-weight: 400;
             letter-spacing: 1.5px;
             color: #000000;
