--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,12 +11,17 @@ html, body {
     margin: 0 auto;
     font-family: $font;
     font-size: 16px;
-
 }
 h1 {
     font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     text-transform: uppercase;
+}
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+    text-transform: uppercase;
+    font-size: 1.4rem;  
 }
 p {
     font-family: 'Karla', sans-serif;
